[project]
name = "i-am-in-class"
version = "0.1.0"
description = "秒应小程序自动打卡"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "gql>=4.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
]
